Try desperately to figure out apache http client basic auth